--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-xl-5 content" data-aos="fade-up" data-aos-duration="1000">
                         <h3>About Us</h3>
-                        <h2>Ducimus rerum libero reprehenderit cumque</h2>
+                        <h2>Ducimus priums libero reprehenderit cumque</h2>
                         <p>Ipsa sint sit. Quis ducimus tempore dolores impedit et dolor cumque alias maxime. Enim reiciendis minus et rerum hic non. Dicta quas cum quia maiores iure. Quidem nulla qui assumenda incidunt voluptatem tempora deleniti soluta.</p>
                         <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
                     </div>
